# DARTPrimate

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  DARTPrimate.cpp  DARTPrimate_Example.cpp  config.toml
Application/models/4dofArm/: 4dofArm.xml  4dofArmParamMap.txt
Example/: CMakeLists.txt  DARTPrimate_Example.cpp
Example/models/1DOFArm/: 1dTrackingArm.xml  1dTrackingArmParamMap.txt
Example/models/4DOFArm/: 4dTrackingArm.xml  4dTrackingArmParamMap.txt
librealtest/: CMakeLists.txt  example.hpp  rs-capture.cpp
src/depth_sources/: depth_source.h  image_depth_source.h  kinectv2_depth_source.h  realsense_depth_source.cpp  realsense_depth_source.h
src/optimization/: optimizer.cpp
src/optimization/kernels/: kernel_common.h
src/pose/: pose.cpp
